[package]
name = "raytracing_p2"
version = "0.1.0"
edition = "2021"
authors = ["Humberto de la Cruz"]

[dependencies]
winit = "0.28"
pixels = "0.13"
bytemuck = { version = "1.14", features = ["derive"] }
rayon = "1.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 1
